wip(#24): slide live preview

--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/template.html.twig
@@ -49,7 +49,7 @@
             :title="$tc('blurElysiumSlides.slideSelection.listLabel')"
         >
             <blur-column>
-                <blur-elysium-slide-selection
+                <elysium-slide-selection
                     :selected-slides="selectedSlides"
                     @drag-slide-drop="dragSlideDrop"
                     @remove-slide="removeSlide"
