--- a/src/Resources/app/administration/src/extension/sw-media-quickinfo-usage/template.html.twig
+++ b/src/Resources/app/administration/src/extension/sw-media-quickinfo-usage/template.html.twig
@@ -53,7 +53,7 @@
             >
                 <li class="sw-media-quickinfo-usage__item">
                     <div class="sw-media-quickinfo-usage__label">
-                        <blur-elysium-icon
+                        <elysium-icon
                             :size="16"
                             :color="elysiumIconColor"
                         />
