--- a/src/Resources/app/administration/src/component/slide/preview/template.html.twig
+++ b/src/Resources/app/administration/src/component/slide/preview/template.html.twig
@@ -16,6 +16,6 @@
             lineHeight: '1.5',
             textWrap: 'balance'
         }">
-        Dies ist nur eine ungefähre Vorschau und kann von der tatsächlichen Darstellung im Storefront abweichen. Individuelle CSS Klassen und Twig-Templates werden in dieser Vorschau nicht berücksichtigt.
+        Dies ist nur eine ungefähre Vorschau und kann von der tatsächlichen Darstellung im Storefront abweichen. Individuelle Theme-Styles, CSS Klassen und Twig-Templates werden in dieser Vorschau nicht berücksichtigt.
     </div>
 </div>
