wip(slide-preview): add preview-cover and preview-focus-image component

--- a/src/Resources/app/administration/src/component/slide/preview/template.html.twig
+++ b/src/Resources/app/administration/src/component/slide/preview/template.html.twig
@@ -6,7 +6,7 @@
     }">
     <div 
         :style="slideStyles">
-
+        <elysium-slide-preview-cover />
         <elysium-slide-preview-container />
     </div>
     <div 
