--- a/src/Resources/app/administration/src/component/slide/preview/container/template.html.twig
+++ b/src/Resources/app/administration/src/component/slide/preview/container/template.html.twig
@@ -1,5 +1,6 @@
 <div
     :style="containerStyles">
     <elysium-slide-preview-content />
-    {{slide.slideCover}}
+    <elysium-slide-preview-focus-image
+        v-if="slide.presentationMedia" />
 </div>
