--- a/src/Resources/app/administration/src/extension/sw-cms-section/template.html.twig
+++ b/src/Resources/app/administration/src/extension/sw-cms-section/template.html.twig
@@ -1,7 +1,7 @@
 <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
 {% block sw_cms_section_content %}
     <template v-if="section.type === 'blur-elysium-section'">
-        <div class="blur-elysium-cms-slide-skeleton-badge">
+        <div class="elysium-element-badge">
             {{ $tc('blurElysiumSection.label') }}
         </div>
         <blur-elysium-cms-section
