fix(#31): fix validation errors

--- a/src/Resources/app/administration/src/component/iap/subscription-card/template.html.twig
+++ b/src/Resources/app/administration/src/component/iap/subscription-card/template.html.twig
@@ -1,4 +1,4 @@
-<sw-card
+<mt-card
     :title="$tc('blurElysiumIAP.title')">
     <div v-if="elysiumProIsActive">
         <div v-html="$tc('blurElysiumIAP.subscribePro.activeDescription')" />
@@ -39,4 +39,4 @@
             Upgrade to Pro
         </mt-button>
     </div>
-</sw-card>
+</mt-card>
