--- a/src/Resources/app/administration/src/extension/sw-media-quickinfo-usage/template.html.twig
+++ b/src/Resources/app/administration/src/extension/sw-media-quickinfo-usage/template.html.twig
@@ -26,7 +26,7 @@
                     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                     {% block blur_media_quickinfo_usage_item_icon %}
                     <div class="sw-media-quickinfo-usage__label">
-                        <sw-icon
+                        <mt-icon
                             :name="usage.icon.name"
                             :color="usage.icon.color"
                             small
