--- a/src/Resources/app/storefront/src/scss/_elysium-slider.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-slider.scss
@@ -1,3 +1,6 @@
+@import 'navigation';
+@import 'arrows';
+
 .cms-element-elysium-slider {
     position: relative;
 
@@ -27,10 +30,8 @@
     &.is-loading {
         .splide__list {
             display: grid;
-            grid-template-columns: repeat(
-                var(--elysium-slider-columns, 1),
-                minmax(0, 1fr)
-            );
+            grid-template-columns: repeat(var(--elysium-slider-columns, 1),
+                    minmax(0, 1fr));
             gap: var(--elysium-slider-gap, 0px);
         }
 
@@ -45,6 +46,3 @@
 .blur-elysium-slide__wrapper {
     position: relative;
 }
-
-@import 'navigation';
-@import 'arrows';
