fix: correct elysium settings selection in cms sidebar, change cms sidebar icon

--- a/src/Resources/app/administration/src/extension/sw-cms-sidebar/template.html.twig
+++ b/src/Resources/app/administration/src/extension/sw-cms-sidebar/template.html.twig
@@ -5,7 +5,8 @@
     {% block sw_cms_sidebar_blur_section_settings %}
         <sw-sidebar-item
             class="sw-cms-sidebar__elysium-section-settings"
-            icon="regular-dashboard"
+            icon="elysium-cms-sidebar-icon"
+            :iconComponent="'blur-elysium-icon-dashboard'"
             :title="elysiumSectionSettingsTitle"
             :disabled="page.locked || !elysiumSectionSettingsActive"
         >
