wip: adjust slider navigation styling and make it work with multiple slider elements

--- a/src/Resources/app/storefront/src/scss/_elysium-slider.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-slider.scss
@@ -57,6 +57,10 @@
     }
 }
 
+.pagination-bullets-bar {
+    --pagination-bullet-aspect-ratio: 4 / 1;
+}
+
 .cms-element-elysium-slider {
     position: relative;
 
