--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/arrows/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/arrows/template.html.twig
@@ -40,13 +40,27 @@
     <blur-number-input
         v-if="arrowsViewportConfig"
         :style="viewStyle({
-            mobile: { gridColumnEnd: 'span 12' },
-            tablet: { gridColumnEnd: 'span 6' },
+            mobile: { gridColumnEnd: 'span 6' },
+            tablet: { gridColumnEnd: 'span 3' },
         })"
         :model-value="arrowsViewportConfig.iconSize"
         @update-value="value => arrowsViewportConfig.iconSize = value"
         :placeholder="viewportsPlaceholder('arrows.iconSize', 24)"
         :label="$tc('blurElysiumSlider.config.arrows.size.label')"
+        :show-device="true"
+        :device="device"
+        @on-device="cmsDeviceSwitch"
+    />
+    <blur-number-input
+        v-if="arrowsViewportConfig"
+        :style="viewStyle({
+            mobile: { gridColumnEnd: 'span 6' },
+            tablet: { gridColumnEnd: 'span 3' },
+        })"
+        :model-value="arrowsViewportConfig.offsetPadding"
+        @update-value="value => arrowsViewportConfig.offsetPadding = value"
+        :placeholder="viewportsPlaceholder('arrows.offsetPadding', 24)"
+        :label="$tc('blurElysiumSlider.config.arrows.offsetPadding.label')"
         :show-device="true"
         :device="device"
         @on-device="cmsDeviceSwitch"
